--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 1rem 1rem;
+    z-index: 100;
 }
 
 .logo {
@@ -215,3 +216,97 @@ h2 {
 section h2 {
     margin: 0.5rem 0;
 }
+
+#contact form {
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+}
+
+#contact form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+#contact form .input-box input,
+#contact form textarea {
+    width: 100%;
+    padding: 0.5rem;
+    font-size: 1.1rem;
+    color: var(--gray-7);
+    background: var(--space-cadet);
+    border-radius: 0.4rem;
+    margin: 0.3rem 0;
+}
+
+#contact form .input-box input {
+    width: 49%;
+}
+
+#contact form textarea {
+    resize: none;
+}
+
+#contact form .btn {
+    cursor: pointer;
+    background-color: var(--gray-4);
+    outline: none;
+    border: none;
+    box-shadow: 0 0 1rem var(--gray-2);
+    border-radius: 0.4rem;
+    transition: 0.5s ease;
+}
+
+#contact form .btn:hover {
+    background-color: var(--gray-7);
+    color: var(--gray-4);
+}
+
+.footer {
+    background-color: var(--orange);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0.5rem 9%;
+}
+
+.footer p {
+    color: var(--gray-7);
+}
+
+.footer-icon a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.3rem;
+    background: var(--gray-6);
+    border-radius: 0.4rem;
+    transition: 0.5s ease;
+}
+
+.footer-icon a:hover {
+    box-shadow: 0 0 0.7rem var(--gray-6);
+}
+
+@media only screen and (max-width: 991px) {
+    html {
+        font-size: 55%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .header {
+        padding: 2rem 3%;
+    }
+
+    section {
+        padding: 10rem 2% 3rem;
+    }
+
+    .footer {
+        padding: 2rem 3%;
+    }
+}
+
